--- a/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/index.html
+++ b/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/index.html
@@ -3,58 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>码文社区</title>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/community.css">
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery-3.5.1.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">码文社区</span>
-            </button>
-            <a class="navbar-brand" href="#">码文社区</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
-                </div>
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user != null}">
-                    <a href="/publish">发布</a>
-                </li>
-                <li th:if="${session.user == null}"><a href="https://github.com/login/oauth/authorize?client_id=1a6ace0dbce07b8b4d19&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
-                <li class="dropdown" th:if="${session.user != null}">
-                    <a href="#" th:text="${session.user.getName()}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
-                        <li><a href="#">个人资料</a></li>
-                        <li><a href="#">退出登录</a></li>
-                    </ul>
-                </li>
-            </ul>
-
-        </div>
-    </div>
-</nav>
+<div th:insert="~{public :: nav}"></div>
 
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>  发现</h2>
             <hr>
-
-            <div class="media" th:each="question:${questionList}">
+            <!--列表-->
+            <div class="media" th:each="question:${pagination.questions}">
                 <div class="media-left">
                     <a href="#">
                         <img  class="media-object" th:src="${question.user.avatarUrl}" alt="avatar">
@@ -65,13 +29,44 @@
                     <span th:text="${question.description}"></span>
                     <br>
                     <div class="text-desc">
-                        <span  th:text="${question.user.name}">匿名</span><span >发表了文章</span>
-                        <span >•</span><span  th:text="${question.commentCount}"></span><span >个评论•</span>
-                        <span  th:text="${question.viewCount}"></span><span >次浏览</span>
+                        <span  th:text="${question.user.name}">匿名</span> 发表了文章•
+                        <span  th:text="${question.commentCount}"></span>个评论•
+                        <span  th:text="${question.viewCount}"></span>次浏览•
+                        <span th:text="${#dates.format(question.getGmtCreate(),'yyyy MMMM dd')}"></span>
                     </div>
                 </div>
             </div>
+            <!--分页-->
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li th:if="${pagination.showFirstPage}">
+                        <a href="/?page=1" >
+                            <span aria-hidden="true"  >&lt;&lt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pagination.showPrevious}">
+                        <a th:href="@{/(page=${pagination.getCurrentPage() - 1})}">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                    <li th:each="page : ${pagination.pages}" th:class="${pagination.currentPage == page}? 'active' : ''">
+                        <a th:href="@{/(page=${page})}" th:text="${page}">
+                            <span aria-hidden="true">&gt;&gt;</span>
+                        </a>
+                    </li>
 
+                    <li th:if="${pagination.showNext}" >
+                        <a th:href="@{/(page=${pagination.getCurrentPage() + 1})}">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pagination.showEndPage}">
+                        <a  th:href="@{/(page=${pagination.getTotalPage()})}">
+                            <span aria-hidden="true" th:if="${pagination.showEndPage}" th:href="@{/(page=${pagination.getTotalPage()})}">&gt;&gt;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
 
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
