--- a/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/publish.html
+++ b/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/publish.html
@@ -3,54 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>发布文章</title>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/community.css">
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery-3.5.1.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">码文社区</span>
-            </button>
-            <a class="navbar-brand" href="#">码文社区</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
-                </div>
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user != null}">
-                    <a href="/publish">发布</a>
-                </li>
-                <li th:if="${session.user == null}">
-                    <a  href="https://github.com/login/oauth/authorize?client_id=1a6ace0dbce07b8b4d19&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
-                </li>
-                <li class="dropdown" th:if="${session.user != null}">
-                    <a href="#" th:text="${session.user.getName()}" class="dropdown-toggle" data-toggle="dropdown"
-                       role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
-                        <li><a href="#">个人资料</a></li>
-                        <li><a href="#">退出登录</a></li>
-                    </ul>
-                </li>
-            </ul>
-
-        </div>
-    </div>
-</nav>
+<div th:insert="~{public :: nav}"></div>
 
 <div class="container-fluid main">
     <div class="row">
