--- a/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/publish.html
+++ b/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/publish.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>发布文章</title>
-    <script src="js/jquery-3.5.1.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
+    <script src="/js/jquery-3.5.1.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
 </head>
 <body>
 <div th:insert="~{public :: nav}"></div>
@@ -17,7 +17,8 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h3><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>  发起</h3>
             <hr>
-            <form action="/publish" method="post">
+            <form action="/publish" method="post" >
+                <input type="hidden" th:value="${id}" id="id" name="id"/>
                 <div class="form-group">
                     <label for="title">问题标题(简单扼要)</label>
                     <input th:value="${title}" type="text" class="form-control" id="title" placeholder="问题标题" name="title">
