--- a/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/index.html
+++ b/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/community.css">
 </head>
+<script type="application/javascript">
+    window.onload = function () {
+        debugger;
+        var closable = window.localStorage.getItem("closable");
+        if(closable == "true") {
+            window.close();
+            window.localStorage.removeItem("closable");
+        }
+    }
+</script>
 <body>
 <div th:insert="~{public :: nav}"></div>
 
