--- a/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/static/css/community.css
+++ b/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/static/css/community.css
@@ -47,11 +47,26 @@ body {
 }
 
 .menu .icon{
-    margin-right: 6px;
+    margin-right: 6px ;
     font-size: 15px;
     cursor: pointer;
 }
 
+.menu .active{
+    color: #499ef3;
+}
+
 .menu .icon:hover{
-color: #499ef3;
+  color: #499ef3;
+}
+
+.collapse-border{
+    border: 1px solid #eee;
+    margin-top: 10px;
+    padding-top: 15px;
+}
+
+.media-body .content {
+    margin-top: 15px;
+    margin-bottom: 5px;
 }
