[SpringBoot项目--COMMUNITY]完成通知功能

--- a/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/static/css/community.css
+++ b/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/static/css/community.css
@@ -62,7 +62,7 @@ body {
 
 .collapse-border{
     border: 1px solid #eee;
-    margin-top: 10px;
+    margin: 10px 0px;
     padding-top: 15px;
 }
 
