--- a/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/index.html
+++ b/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
             <h3><span class="glyphicon glyphicon-list" aria-hidden="true"></span>  发现</h3>
             <hr>
             <!--列表-->
-            <div class="media" th:each="question:${pagination.questions}">
+            <div class="media" th:each="question:${pagination.data}">
                 <div class="media-left">
                     <a href="#">
                         <img  class="media-object" th:src="${question.user.avatarUrl}" alt="avatar">
