--- a/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/publish.html
+++ b/Desktop/rear-end-basis/SpringBoot/community/src/main/resources/templates/publish.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>发布文章</title>
     <script src="/js/jquery-3.5.1.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/community.js"></script>
-    <script src="/js/editormd.min.js"></script>
+    <script src="/js/bootstrap.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
+    <script src="/js/editormd.js" type="application/javascript"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
-    <link rel="stylesheet" href="/css/editormd.min.css">
+    <link rel="stylesheet" href="/css/editormd.css">
 
 </head>
 <body>
@@ -19,38 +19,61 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h3><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>  发起</h3>
+            <h3><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 发起</h3>
             <hr>
-            <form action="/publish" method="post" >
+            <form action="/publish" method="post">
                 <input type="hidden" th:value="${id}" id="id" name="id"/>
                 <div class="form-group">
                     <label for="title">问题标题(简单扼要)</label>
-                    <input th:value="${title}" type="text" class="form-control" id="title" placeholder="问题标题" name="title">
+                    <input th:value="${title}" type="text" class="form-control" id="title" placeholder="问题标题"
+                           name="title">
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" id="question-editor">
                     <label for="description">问题补充</label>
-                    <textarea th:text="${description}" name="description" class="form-control" id="description" placeholder="问题补充" cols="30" rows="10"></textarea>
-                </div>
+                    <textarea th:text="${description}" name="description" class="form-control" id="description"
+                              placeholder="问题补充" cols="30" rows="10" style="display: none"></textarea>
 
+                </div>
+                <script type="text/javascript">
+                    $(function () {
+                        var editor = editormd("question-editor", {
+                            width  : "100%",
+                            height : 350,
+                            path: "/js/lib/",
+                            delay:0,
+                            watch:false,
+                            placeholder:"请输入问题描述",
+                            imageUpload: true,
+                            imageFormats: ["jpg","jpeg","gif","png","bmp","webp"],
+                            imageUploadURL:"/file/upload"
+                        });
+                    });
+                </script>
                 <div class="form-group">
                     <label for="tag">添加标签</label>
-                    <input th:value="${tag}" type="text" name="tag" class="form-control" id="tag" placeholder="输入标签,以逗号分割" autocomplete="off" onclick="showSelectTag('show')" onblur="showSelectTag('hide')"/>
+                    <input th:value="${tag}" type="text" name="tag" class="form-control" id="tag"
+                           placeholder="输入标签,以逗号分割" autocomplete="off" onclick="showSelectTag('show')"
+                           onblur="showSelectTag('hide')"/>
                     <div id="select-tag" style="display: none;margin-top: 10px">
                         <div>
                             <!-- Nav tabs -->
                             <ul class="nav nav-tabs" role="tablist">
-                                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">开发语言</a></li>
-                                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">平台架构</a></li>
+                                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab"
+                                                                          data-toggle="tab">开发语言</a></li>
+                                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab"
+                                                           data-toggle="tab">平台架构</a></li>
                             </ul>
 
                             <!-- Tab panes -->
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="home">
-                                    <span class="label label-info"><span class="glyphicon glyphicon-tags" onclick="selectTag('Java')"> Java</span></span>
+                                    <span class="label label-info"><span class="glyphicon glyphicon-tags"
+                                                                         onclick="selectTag('Java')"> Java</span></span>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="profile">
-                                    <span class="label label-info"><span class="glyphicon glyphicon-tags" onclick="selectTag('Spring')"> Spring</span></span>
+                                    <span class="label label-info"><span class="glyphicon glyphicon-tags"
+                                                                         onclick="selectTag('Spring')"> Spring</span></span>
                                 </div>
                             </div>
                         </div>
