--- a/Desktop/blog/global/global.css
+++ b/Desktop/blog/global/global.css
@@ -30,6 +30,14 @@
   border-radius: 20px;
 }
 
+.el-input__inner[BigBtn='big'] {
+  border-radius: 20px;
+  width: 1000px;
+  height: 60px;
+  background-color:rgba(255, 255, 255, 0);
+  border: 2px solid #f56c6c;
+}
+
 .el-input__inner[NormalColor='norm'] {
   border-radius: 20px;
 }
